--- a/src/secp256k1/.gitignore
+++ b/src/secp256k1/.gitignore
@@ -20,7 +20,6 @@ config.status
 libtool
 .deps/
 .dirstamp
-build-aux/
 *.lo
 *.o
 *~
@@ -33,3 +32,37 @@ m4/ltversion.m4
 m4/lt~obsolete.m4
 src/stamp-h1
 libsecp256k1.pc
+
+# http://www.gnu.org/software/automake
+
+Makefile.in
+/ar-lib
+/mdate-sh
+/py-compile
+/test-driver
+/ylwrap
+
+# autoreconf
+Makefile.in
+aclocal.m4
+autom4te.cache/
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/m4/libtool.m4
+build-aux/m4/lt~obsolete.m4
+build-aux/m4/ltoptions.m4
+build-aux/m4/ltsugar.m4
+build-aux/m4/ltversion.m4
+build-aux/missing
+build-aux/compile
+build-aux/test-driver
+config.log
+config.status
+configure
+libtool
+src/config/blocknode-config.h
+src/config/blocknode-config.h.in
+src/config/stamp-h1
