Added BIP 39 seed phrase support

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -84,6 +84,8 @@ BITCOIN_CORE_H = \
   amount.h \
   base58.h \
   bip38.h \
+  bip39.h \
+  bip39_english.h \
   bloom.h \
   chain.h \
   chainparams.h \
@@ -109,6 +111,7 @@ BITCOIN_CORE_H = \
   eccryptoverify.h \
   ecwrapper.h \
   hash.h \
+  hdchain.h \
   httprpc.h \
   httpserver.h \
   init.h \
@@ -234,6 +237,7 @@ libbitcoin_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libbitcoin_wallet_a_SOURCES = \
   activemasternode.cpp \
   bip38.cpp \
+  bip39.cpp \
   denomination_functions.cpp \
   obfuscation.cpp \
   obfuscation-relay.cpp \
@@ -343,6 +347,7 @@ libbitcoin_common_a_SOURCES = \
   eccryptoverify.cpp \
   ecwrapper.cpp \
   hash.cpp \
+  hdchain.cpp \
   key.cpp \
   keystore.cpp \
   netbase.cpp \
